--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.1",
+    "socket.io": "^4.5.3",
     "supertest": "^6.3.0"
   }
 }
