--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.2.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "multer-sharp-resizer": "^1.0.4",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
