--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "fn": "^0.2.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^109.0.1",
     "jest": "^29.2.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
